<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.xtemplus</groupId>
    <artifactId>extend-plugin-framework</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>extend-plugin-framework</name>
    <description>Extensible plugin framework for Java (core, Spring Boot, Maven tooling)</description>
    <url>https://github.com/xtemplus/extend-plugin-framework</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>xtemplus</name>
            <url>https://github.com/xtemplus</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/xtemplus/extend-plugin-framework.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/xtemplus/extend-plugin-framework.git</developerConnection>
        <url>https://github.com/xtemplus/extend-plugin-framework</url>
    </scm>

    <modules>
        <module>plugin-core</module>
        <module>plugin-spring-spi</module>
        <module>plugin-spring-starter</module>
        <module>plugin-security-maven</module>
    </modules>

    <!--
      快照：central.sonatype.com（id=central）。发快照请加 -Psnapshot-deploy（见下方 profile）。
      正式版：仅 central-publishing-maven-plugin 上传；不设 release 型 repository，避免 OSSRH 402。
      默认 maven.deploy.skip=true，避免对正式版执行 deploy 时出现「repository was not specified」。
    -->
    <distributionManagement>
        <snapshotRepository>
            <id>central</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 字节码目标 Java 8；compiler-plugin 的 -release 须为数字 8，不能写 1.8 -->
        <java.version>8</java.version>
        <spring-boot.version>2.7.18</spring-boot.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
        <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
        <!-- 正式版无 distributionManagement.repository；发 Central 须 -Pcentral-release。快照须 -Psnapshot-deploy -->
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.github.xtemplus</groupId>
                <artifactId>plugin-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xtemplus</groupId>
                <artifactId>plugin-spring-spi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xtemplus</groupId>
                <artifactId>plugin-spring-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.xtemplus</groupId>
                <artifactId>plugin-security-maven</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.everit.json</groupId>
                <artifactId>org.everit.json.schema</artifactId>
                <version>1.5.1</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20240303</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <configuration>
                        <source>1.8</source>
                        <additionalOptions>
                            <additionalOption>-Xdoclint:none</additionalOption>
                        </additionalOptions>
                        <quiet>true</quiet>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${maven-gpg-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>${central-publishing-maven-plugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <publishingServerId>central</publishingServerId>
                        <autoPublish>false</autoPublish>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin.version}</version>
                    <configuration>
                        <skip>${maven.deploy.skip}</skip>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- 仅当版本为 *-SNAPSHOT 时使用：恢复 deploy 至 snapshotRepository -->
        <profile>
            <id>snapshot-deploy</id>
            <properties>
                <maven.deploy.skip>false</maven.deploy.skip>
            </properties>
        </profile>
        <!-- 正式版发 Central：GPG + central-publishing（deploy 插件仍跳过，由 publishing 上传） -->
        <profile>
            <id>central-release</id>
            <properties>
                <maven.deploy.skip>true</maven.deploy.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
